--- a/main.css
+++ b/main.css
@@ -1,5 +1,10 @@
 @import url("css/layout.css");
 @import url("css/components/navbar.css");
 @import url("css/components/primary-menu.css");
+@import url("css/components/cards.css");
 @import url("css/typography.css");
 @import url("css/util.css");
+
+body{
+    max-width: 100vw !important;
+}
