--- a/css/layout.css
+++ b/css/layout.css
@@ -46,3 +46,45 @@
     grid-row: 4/5;
     grid-area: footer;
 }
+/* product listing page  */
+.product-page{
+    display: grid;
+    width: 100vw;
+    height: 100vh;
+
+
+    grid-template-areas:
+    "header header header"
+    "aside main main"
+    "aside main main"
+    "aside main main"
+    "footer footer footer";
+
+}
+.product-page-header{
+    grid-area: header;
+    width: 100vw;
+    grid-column: 1/4;
+    grid-row: 1/2;
+
+}
+.product-page-aside{
+  grid-area: aside;
+  width: 40vw;
+  grid-column: 1/2;
+  grid-row: 2/4;
+
+}
+.product-page-main{
+  grid-area: main;
+  width: 60vw;
+  grid-column: 2/4;
+  grid-row: 2/4;
+}
+.product-page-footer{
+  grid-area: footer;
+  width: 100vw;
+  grid-column: 1/4;
+  grid-row: 4/5;
+
+}
