--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @import url("css/layout.css");
 @import url("css/components/navbar.css");
 @import url("css/components/primary-menu.css");
+@import url("css/components/aside-filter.css");
 @import url("css/components/cards.css");
 @import url("css/typography.css");
 @import url("css/util.css");
