basic card updated

--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -15,3 +15,9 @@
 .test>span{
     color: var(--sec-dark-purple);  
 }
+/* price-container  */
+.price-container{
+    max-width: 450px;
+    padding: 20px;
+    background-color: var(--lightmode-bg-color);
+}
