--- a/css/layout.css
+++ b/css/layout.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: content-box;
+    font-family: 'Roboto', sans-serif;
 }
 .home-page{
     display: grid;
@@ -95,5 +96,46 @@
   width: 100vw;
   grid-column: 1/4;
   grid-row: 4/5;
+
+}
+/* product cart page  */
+.product-cart-page{
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+
+
+  grid-template-areas:
+  "header header header"
+  "main main main"
+  "main main main"
+  "main main main"
+  "footer footer footer";
+}
+.product-page-cart-header{
+  /* background-color: maroon; */
+
+  width: 100vw;
+  height: 100px;
+  grid-column: 1/4;
+  grid-row: 1/2;
+  grid-area: header;
+
+}
+.product-page-cart-main{
+  width: 100vw;
+  background-color: #F7F7F7;
+  grid-column: 1/4;
+  grid-row: 2/4;
+  grid-area: main;
+
+}
+.product-page-cart-footer{
+  /* background-color:aquamarine; */
+
+  width: 100vw;
+  grid-column: 1/4;
+  grid-row: 4/5;
+  grid-area: footer;
 
 }
