--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -17,7 +17,62 @@
 }
 /* price-container  */
 .price-container{
+    border-radius: 8px;
     max-width: 450px;
     padding: 20px;
     background-color: var(--lightmode-bg-color);
+    box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
+}
+.product-cards{
+    /* border: 2px solid red; */
+    padding: 50px 0 0 0;
+    display: flex;
+    flex-direction: row;
+    gap: 50px ;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.cart-container{
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    
+
+}
+.vertical-card-height{
+    height: 280px;
+    border-radius: 8px!important;
+    /* border: 2px solid red!important; */
+}
+.quantity-container{
+    display: flex;
+    font-size: 16px;
+    justify-content: start;
+    align-items: center;
+}
+.quantity{
+ border: 1px solid var(--sec-dark-purple);
+ padding: 0 2px 0 2px;
+ 
+}
+.quantity-count{
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    text-align: center;
+    border: 2px solid #9A9A9A;
+    margin: 0 8px 0 8px;
+    cursor: pointer;
+
+}
+.quantity {
+    width: 36px;
+    height: 24px;
+    border-radius: 8px ;
+    text-align: center;
+    border: 2px solid #9A9A9A;
+    cursor: pointer;
 }
