--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -75,3 +75,25 @@
     border: 2px solid #9A9A9A;
     cursor: pointer;
 }
+/* login */
+.login-container{
+    width: 100vw;
+    height: 100%;
+    /* background-color: rebeccapurple; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+}
+.login-body{
+    width: 500px;
+    /* height: 480px; */
+    background-color: var(--lightmode-bg-color);
+    padding: 50px 70px;
+    box-shadow: 0px 4px 50px 0px #0000000D;
+    border-radius: 8px;
+}
+.login-remember-ad-forget-pass{
+    align-items: flex-end;
+    justify-content: space-between;
+}
